--- a/.github/workflows/keep.yml
+++ b/.github/workflows/keep.yml
@@ -1,4 +1,4 @@
-name: douban book sync
+name: keep sync
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
         NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
-        NOTION_PAGE_URL: ${{ secrets.NOTION_PAGE_URL }}
+        NOTION_PAGE: ${{ secrets.NOTION_PAGE }}
         KEEP_MOBILE: ${{ secrets.KEEP_MOBILE }}
         KEEP_PASSWORD: ${{ secrets.KEEP_PASSWORD }}
         YEAR: ${{ vars.YEAR }}
@@ -27,9 +27,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: douban book sync
+      - name: keep  sync
         run: |
-          python -u scripts/douban.py "book"
+          python -u scripts/keep.py
       - name: Remove folder
         run: rm -rf ./OUT_FOLDER
       - name: Set default year if not provided
@@ -37,7 +37,7 @@ jobs:
         if: env.YEAR == ''
       - name: notion heatmap
         run: |
-          github_heatmap notion  --notion_token "${{secrets.NOTION_TOKEN}}" --database_id "${{ env.DATABASE_ID }}" --date_prop_name "日期" --value_prop_name "KM" --unit "KM" --year $YEAR  --me "${{secrets.BOOK_NAME}}" --without-type-name --with-animation --background-color=${{ vars.background_color||'#FFFFFF'}} --track-color=${{ vars.track_color||'#ACE7AE'}} --special-color1=${{ vars.special_color||'#69C16E'}} --special-color2=${{ vars.special_color2||'#549F57'}} --dom-color=${{ vars.dom_color||'#EBEDF0'}} --text-color=${{ vars.text_color||'#000000'}}
+          github_heatmap notion  --notion_token "${{secrets.NOTION_TOKEN}}" --database_id "${{ env.DATABASE_ID }}" --date_prop_name "日期" --value_prop_name "KM" --unit "KM" --year $YEAR  --me "${{secrets.NAME}}" --without-type-name --with-animation --background-color=${{ vars.background_color||'#FFFFFF'}} --track-color=${{ vars.track_color||'#ACE7AE'}} --special-color1=${{ vars.special_color||'#69C16E'}} --special-color2=${{ vars.special_color2||'#549F57'}} --dom-color=${{ vars.dom_color||'#EBEDF0'}} --text-color=${{ vars.text_color||'#000000'}}
       - name: Rename notion.svg to a random name
         run: |
             RANDOM_FILENAME=$(uuidgen).svg
@@ -45,4 +45,4 @@ jobs:
             echo "Renamed file to $RANDOM_FILENAME"
       - name: udpate heatmap 
         run: |
-            python -u scripts/update_heatmap.py "book"
+            python -u scripts/update_heatmap.py
