--- a/.github/workflows/keep.yml
+++ b/.github/workflows/keep.yml
@@ -33,7 +33,7 @@ jobs:
           pip install -r requirements.txt
       - name: keep  sync
         run: |
-          keep
+          keep2notion
       - name: Set default year if not provided
         run: echo "YEAR=$(date +"%Y")" >> $GITHUB_ENV
         if: env.YEAR == ''
